# pants

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  choices.rs  client_config.rs  gen_args.rs  lib.rs  main.rs  output.rs
gui/: Cargo.toml
gui/src/: client_config.rs  connection.rs  entry.rs  gui_message.rs  lib.rs  main.rs  temp_message.rs  utils.rs  vault.rs
gui/src/state/: entry.rs  manager.rs  new_entry.rs  password.rs  prompt.rs
gui/src/style/: card.rs
gui/src/widget/: card.rs  expand.rs  helpers.rs  mod.rs
scripts/: conversion.py
server/: Cargo.toml
src/: action.rs  cli.rs  command.rs  config.rs  errors.rs  file.rs  info.rs  lib.rs  main.rs  manager_message.rs  message.rs  operation.rs  output.rs  password.rs  reads.rs  schema.rs  secure.rs  store.rs  utils.rs  vault.rs  vault_encrypted.rs
src.old/: action.rs  file.rs  manager_message.rs  message.rs  output.rs  reads.rs  schema.rs  secure.rs  store.rs
src.old/config/: vault_config.rs
src.old/vault/: encrypted.rs  interface.rs
src/client/: config.rs
src/config/: client_config.rs  internal_config.rs  manager_config.rs  mod.rs  vault_config.rs
src/gui/: card.rs  card_style.rs  connection.rs  expand.rs  gui_message.rs  main.rs  mod.rs  shortcut.rs  temp_message.rs  vault.rs
src/gui/state/: entry.rs  manager.rs  mod.rs  new_entry.rs  new_vault.rs  password.rs  prompt.rs  vault.rs
src/gui/style/: card.rs  expand.rs
src/gui/widget/: card.rs  expand.rs  mod.rs
src/transaction/: command.rs  mod.rs  operation.rs
src/vault/: config.rs  dir.rs  encrypted.rs  entry.rs  group.rs  interact.rs  interface.rs  manager.rs  mod.rs  schema.rs
