[package]
name = "pants-store"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "pants"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.4.0"
argon2 = "0.5.3"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
directories-next = "2.0.0"
glob = "0.3.1"
inquire = "0.7.5"
pants-gen = "0.1.0"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"
zeroize = { version = "1.7.0", features = ["derive"] }
