[package]
name = "pants-store"
version = "0.1.0"
edition = "2021"
description = "A password manager"
authors = ["Ben Pawlowski ben@pepski.com"]
license = "MIT"
repository = "https://github.com/BenPski/pants"
readme = "README.md"
exclude = [".github", "scripts"]
rust-version = "1.70.0"
keywords = ["passwords"]
categories = ["command-line-utilities", "cryptography"]
default-run = "pants"

[[bin]]
path = "src/main.rs"
name = "pants"

[[bin]]
path = "src/gui/main.rs"
name = "pants-gui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.86"
arboard = "3.4.0"
argon2 = "0.5.3"
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
directories-next = "2.0.0"
enum-iterator = "2.1.0"
features = "0.10.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
glob = "0.3.1"
iced = "0.12.1"
iced_aw = "0.9.3"
iced_futures = "0.12.0"
inquire = "0.7.5"
pants-gen = "0.1.0"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = { version = "1.8.0", features = ["v4"] }
zeroize = { version = "1.7.0", features = ["derive"] }
