[package]
name = "pants-store"
description = "A password manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true


[workspace]
members = [
	"cli",
	"gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ben Pawlowski ben@pepski.com"]
license = "MIT"
repository = "https://github.com/BenPski/pants"
readme = "README.md"
exclude = [".github", "scripts"]
rust-version = "1.70.0"
keywords = ["passwords"]
categories = ["command-line-utilities", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
pants-store = { path = "." }
anyhow = "1.0.86"
boring-derive = "0.1.0"
secrecy = { version = "0.8.0", features = ["serde"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.199", features = ["derive"] }
pants-gen = "0.3.0"
once_cell = "1.19.0"
serde_json = "1.0.120"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"
anyhow.workspace = true
thiserror = "1.0.62"
chrono = "0.4.38"
glob = "0.3.1"
secrecy = { version = "0.8.0", features = ["serde"] }
boring-derive = "0.1.1"
bincode = "1.3.3"
enum-iterator = "2.1.0"
directories-next = "2.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.8.14"
serde_json.workspace = true
serde.workspace = true
