[package]
name = "pants-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["advanced"] }
boring-derive.workspace = true
secrecy.workspace = true
#iced_futures = "0.12.0"
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git" }
figment.workspace = true
serde.workspace = true
pants-gen.workspace = true
async-std = "1.12.0"
once_cell.workspace = true
pants-store.workspace = true
