[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = "0.7.5"
tokio = "1.39.3"
